--- a/auctions/templates/auctions/newListing.html
+++ b/auctions/templates/auctions/newListing.html
@@ -4,30 +4,17 @@
 
     <h2>Create New Listing</h2>
 
-    {% if message %}
-        <div>{{ message }}</div>
+    {% if submitted %}
+        <div>Your listing was added successfully!</div>
+    {% else %}
+        <form action="{% url 'newListing' %}" method="post">
+            {% csrf_token %}
+
+            {{form.as_p}}
+
+            <input class="btn btn-primary" type="submit" value="Create">
+        </form>
     {% endif %}
-
-    <form action="{% url 'newListing' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="title" placeholder="Title">
-        </div>
-        <div class="form-group">
-            <textarea class="form-control" name="description" placeholder="Description" rows="7"></textarea>
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" name="starting_bid" placeholder="Starting bid">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" name="url_picture" placeholder="URL of Picture">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" name="category" placeholder="Category">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Create">
-    </form>
-
 
 
 {% endblock %}
