--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,13 +1,19 @@
 {% extends "auctions/layout.html" %}
+{% load static %}
 
 {% block body %}
     <h2>Listing: {{listing.title}}</h2>
-    <img src="{{ listing.url_picture }}" class="card-img-top" alt="{{ listing.title }}">
-    <p>{{listing.description}}</p>
-    <h3>{{listing.starting_bid}} Fr.</h3>
+    {% comment %} <img src="{{ listing.url_picture }}" class="card-img-top" alt="{{ listing.title }}"> {% endcomment %}
+    {% if listing.category %}
+        <img src="{% static 'auctions/' %}{{ listing.category|lower }}.jpeg" class="card-img-top" alt="{{ listing.category }}">
+    {% else %}
+        <img src="{% static 'auctions/default.png' %}" class="card-img-top" alt="No category">
+    {% endif %}
+    <p><br>{{listing.description}}</p>
+    <h3>CHF {{listing.starting_bid}}</h3>
     <form>
-        <p>Current bid <p>
-        <input class=card type = "text" value="bid">
+        <p>Current bid: <p>
+        <input type = "text" value="bid">
         <input class="btn btn-primary" type="submit" value="Bid">
     </form>
     <h5>Details:</h5>
